syntax = "proto3";

package common;

message ListReq {
  repeated string ids = 1;
  optional string search = 2;
  optional Paginate paginate = 3;
  optional Order orderBy = 4;
}

message Paginate {
  optional int32 page = 1;
  optional int32 perPage = 2;
}

message Order {
  optional string sort = 1;
  optional string order = 2;
  optional string nulls = 3;
}

message OneReq {
  string id = 1;
}
